[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/objects/LaserBox.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/LaserBoxPart.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/objects/LaserBox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="LaserBox" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )
enableTop = true
enableRight = true
enableBottom = true
enableLeft = true
deactivate = 20

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TopPart" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -30 )
rotation = -1.5708

[node name="RightPart" parent="." instance=ExtResource( 2 )]
position = Vector2( 30, 1 )

[node name="BottomPart" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 30 )
rotation = 1.5708

[node name="LeftPart" parent="." instance=ExtResource( 2 )]
position = Vector2( -30, 0 )
rotation = -3.14159
